@@ -1,6 +1,12 @@
 2005-02-07  Ross Burton  <ross@burtonini.com>
 
 	* data/sound-juicer.glade:
+	* src/sj-prefs.c:
+	Use a GtkFileChooserButton instead of the label+Browse button.
+
+2005-02-07  Ross Burton  <ross@burtonini.com>
+
+	* data/sound-juicer.glade:
 	HIGify the Preferences dialog.
 
 2005-02-07  Ross Burton  <ross@burtonini.com>
